styles/style.scss
/* ... */
@media (max-width: 476px) {
	.footer {
		&__element {
			padding: 0 !important;
		}

		&__element:not(&__element:last-child) {
			width: 100%;
		}
	}

	.email-sub-container {
		min-width: auto;
	}

	.email-sub-form {
		&__input {
			border-right: 2px solid #000;
			border-bottom: none;
		}

		&__btn {
			width: 100%;
		}
	}
}

@media (max-width: 364px) {
	.action-btn {
		font-size: clamp(23px, 3vw, 30px);

		body.ru & {
			font-size: clamp(21px, 3vw, 30px);
		}
	}

	.logo {
		width: 125px;
	}

	.main-header__nav-bar {
		&__list {
			width: 100%;
		}
	}

	.quotes-element {
		&__inner-container {
			padding-right: 17px;
			padding-left: 20px;
			padding-top: 15px;
		}
		&__author {
			padding-right: 0;
		}

		&__quote {
			padding-right: 0;

			&.--smaller-font-size {
				font-size: clamp(15px, 2.2vw, 24px);
				padding-bottom: 17.5px;
			}
		}
	}
}
// Adaptive ---

// Animations
@-webkit-keyframes blink {
	50% {
		opacity: 0;
	}
}
@keyframes blink {
	50% {
		opacity: 0;
	}
}

@-webkit-keyframes quote-card-flip {
	0% {
		transform: rotateY(0deg);
	}
	30% {
		transform: rotateY(180deg);
	}
	70% {
		transform: rotateY(180deg);
	}
	100% {
		transform: rotateY(0deg);
	}
}
@keyframes quote-card-flip {
	0% {
		transform: rotateY(0deg);
	}
	30% {
		transform: rotateY(180deg);
	}
	70% {
		transform: rotateY(180deg);
	}
	100% {
		transform: rotateY(0deg);
	}
}

@-webkit-keyframes quote-hiding {
	50% {
		opacity: 0;
	}
	100% {
		transform: translateX(200vw) scale(0);
	}
}

@keyframes quote-hiding {
	50% {
		opacity: 0;
	}
	100% {
		transform: translateX(200vw) scale(0);
	}
}

@-webkit-keyframes placeholder-appearance {
	to {
		opacity: 1;
	}
}

@keyframes placeholder-appearance {
	to {
		opacity: 1;
	}
}

@-webkit-keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	50% {
		transform: rotate(720deg);
	}

	100% {
		transform: rotate(1080deg);
	}
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	50% {
		transform: rotate(720deg);
	}

	100% {
		transform: rotate(1080deg);
	}
}
// Animations ---

